fixed hero background imgage from getting cutoff at top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ p {
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: center top;/*added center top to fix the hero image background from cutting the top of the image off when viewing in larger displays*/
 }
 
 .float-left {
